--- a/DotNetCoreWebAPI_3.0/appsettings.Development.json
+++ b/DotNetCoreWebAPI_3.0/appsettings.Development.json
@@ -5,5 +5,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Jwt": {
+    "Key": "9e92246f-f927-4c71-a910-e68cfc4c7b27",
+    "Issuer": "http://localhost:4200",
+    "ExpireDays": 1
   }
 }
